--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card-vertical {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.card-vertical > div {
+    margin-bottom: 0 !important;
+    margin-right: 5px;
+}
